Quartz sync: Mar 16, 2025, 9:45 PM

--- a/content/fMRI Tutorial/1.2 GNode and Datalad.md
+++ b/content/fMRI Tutorial/1.2 GNode and Datalad.md
@@ -1,10 +1,12 @@
 ---
-title: '"GNode and Datalad"'
+title: 1.2 GNode and Datalad
 draft: false
 tags:
+  - GNode
+  - Datalad
 ---
 
-## 4.1 G-Node (German Neuroinformatics Node)
+## 1.2.1 G-Node (German Neuroinformatics Node)
 
 Focusing on the development and free distribution of tools for handling and analyzing neurophysiological data, G-Node aims at addressing these aspects as part of the International Neuroinformatics Coordinating Facility ([INCF](http://www.incf.org/)) and the German Bernstein Network for Computational Neuroscience ([NNCN](http://www.nncn.de/)). G-Node also serves as an international forum for Computational Neuroscientists that are interested in sharing experimental data and tools for data analysis and modeling. G-Node is funded through the German Federal Ministry of Education and Research and hosted by Ludwig-Maximilians-Universität München.
 
@@ -13,11 +15,11 @@ Benefits of G-Node over Github:
 - Assigning unique DOI. It is good to open data and get citations. 
 - Using `git-annex` as infrastructure, it helps manage versions. 
 
-## 4.2 gin 
+## 1.2.2 gin 
 
 Management of scientific data, including consistent organization, annotation, and storage of data, is a challenging task. Accessing and managing data from multiple workplaces while keeping it in sync, backed up, and easily accessible from within or outside the lab is even more demanding. The GIN (G-Node Infrastructure) service is a free and open data management system designed for comprehensive and reproducible management of neuroscientific data.
 
-### 4.2.1 Gin client installation
+### Gin client installation
 
 Please see the [official website]( https://gin.g-node.org/G-Node/Info/wiki/GIN+CLI+Setup) for installations. For Mac OS users, the easiest way to install the client on macOS is via [homebrew](https://brew.sh/). G-Node homebrew formulae are maintained in the [G-Node tap](https://github.com/g-node/homebrew-pkg). Install the client, including any dependencies, with:
 
@@ -30,7 +32,7 @@ Alternatively, if you already have git and git-annex installed on your system, o
 
 Once you've installed git-annex, simply download the [gin client for macOS](https://gin.g-node.org/G-Node/gin-cli-releases/raw/master/gin-cli-latest-macos.tar.gz), extract the archive, and put the file named `gin` in a location that's included in your `$PATH`.
 
-### 4.2.2 Basic usage of gin
+### Basic usage of gin
 
 1. register g-node.org website and sign into the [GIN Server](https://gin.g-node.org/user/login).
 2.  Create a new repository using the "+" on the top right. Alterantively, you can create locally:
@@ -59,7 +61,7 @@ You can instead upload individual files or directories by listing them on the co
     gin upload
 ```
 
-### 4.2.3 Fetch any repository updates from the server
+### Fetch any repository updates from the server
 
 If changes are made to your data elsewhere, for example on another computer (assuming they were uploaded to the server), or from another user that you share your data with, you can download these changes by typing the download command from within the repository.
 
@@ -91,7 +93,7 @@ When new data has been added to or existing files changed in the local workspace
 1.  Use `gin ls` to check the sync status of the files in the repository.
 2.  Use `gin upload <file name>` to only upload the specified new file or changes to the specified existing file.
 
-### 4.3 DataLad
+### 1.2.3 DataLad
 
 A good start of [Datalad Handbook](https://handbook.datalad.org/en/latest/index.html).
 
