--- a/content/fMRI Tutorial/1.3 Cloud Computing and Access.md
+++ b/content/fMRI Tutorial/1.3 Cloud Computing and Access.md
@@ -1,9 +1,11 @@
 ---
-title: '"Linux Cluster and Singularity"'
+title: 1.3 Cloud Computing
 draft: false
 tags:
+  - Cloud
+  - HPC
 ---
-The following information is useful for those who can access Linux cluster at LRZ.de
+aThe following information is useful for those who can access Linux cluster at LRZ.de
 ## Access Cloud Computing
 
 Msense Lab also has two cloud computing running `Lora` and `Emma`. `Emma` is accessible from external internet while `Lora` is walled by the intranet. 
