--- a/content/fMRI Tutorial/2.2 BIDS Structure.md
+++ b/content/fMRI Tutorial/2.2 BIDS Structure.md
@@ -1,7 +1,9 @@
 ---
-title: '"2.2 BIDS Structure"'
+title: 2.2 BIDS Structure
 draft: false
 tags:
+  - BIDS
+  - mri
 ---
 BIDS stands for the `B`rain `I`maging `D`ata `S`tructure, which is a simple and intuitive way to organize and describe your data. The whole specification can be found from the [official website](https://bids-specification.readthedocs.io/en/stable/). Here are some excerption from the official website. 
 
