--- a/content/fMRI Tutorial/2.3 Preprocessing with fmriPrep.md
+++ b/content/fMRI Tutorial/2.3 Preprocessing with fmriPrep.md
@@ -1,7 +1,10 @@
 ---
-title: '"2.3 Preprocessing with fmriPrep"'
+title: 2.3 Preprocessing with fmriPrep
 draft: false
 tags:
+  - mri
+  - fmriPrep
+  - fMRI
 ---
 A standard preprocessing pipline of fMRI data looks as theh follows:
 
