--- a/content/fMRI Tutorial/2.4 Quality Control with MRIQC.md
+++ b/content/fMRI Tutorial/2.4 Quality Control with MRIQC.md
@@ -1,7 +1,9 @@
 ---
-title: '"2.4 Quality Control with MRIQC"'
+title: 2.4 Quality Control with MRIQC
 draft: false
 tags:
+  - mri
+  - MRIQC
 ---
 MRIQC extracts no-reference IQMs (image quality metrics) from structural (T1w and T2w) and functional MRI (magnetic resonance imaging) data.
 
