Quartz sync: Mar 16, 2025, 9:52 PM

--- a/content/fMRI Tutorial/2.1 MRI Data Preparation.md
+++ b/content/fMRI Tutorial/2.1 MRI Data Preparation.md
@@ -10,17 +10,17 @@ tags:
 
 Types of MRI data depend on what MRI sequence you use. An MRI sequence is a number of radiofrequency pluses and gradients that result in a set of images with a particular appearance. For example, here is a  property from the EPI bold sequence that we use. 
 
-![[media/epbold_sequence.jpeg|500]]
+![[epbold_sequence.jpeg|500]]
 
 For each experiment, we may use multiple sequences, such as resting state, T1 structure, EP2d Bold, etc. Running each sequence will generate images in a separate subfolder in your study folder, with the sub-folder name indicating the sequence. Below is one example from one sample data from Cemre's study. Can you guess what sequences have been used?
 
-![[media/rawMRI_structure.png]]
+![[rawMRI_structure.png]]
 
 
 From the protocol, you will guess the sequence of that folder. For example, `T1W_MPR_*` are T1 scanning. `EP_BOLD_BISEC_S*` are fMRI BOLD signals for the task bisection (two sessions). The foldder name is a combination of `protocol` _ `task` _ `serialNo`. 
 
 Within each folder, it stores individual DICOM images, like this:
-![[media/MRI_subfolder_images.png|400]]
+![[MRI_subfolder_images.png|400]]
 
 DICOM stands for **D**igital **I**maging and **Co**mmunications in **M**edicine. Each image contain independent meta information, which is actually redundant for our purpose. If your run scan 1000 times, you will have 1000 DICOM files in that folder. To better organize your data, it is better convert DICOM data to Nifti file - a single file for each run.  
 
@@ -32,7 +32,7 @@ One very handy commandline tool to do this job is `dcm2nii` [DICOM to NIfTI conv
 
 With MRIcroGL open, click menu `Import` - `Convert DICOM to NIfTI`, it will pop up `dcm2niix` converter page. Specify filename rules, store location, and other settings, you can quickly convert DICOM to NIfTI. 
 
-![[media/mricroGL_converter.png]]
+![[mricroGL_converter.png]]
 
 Two important parameters for naming rules is %p and %s, represent the protocol and series number respectively. This essentially is the folder name. 
 
