Quartz sync: Mar 17, 2025, 11:57 PM

--- a/content/fMRI Tutorial/1.1 Basic Linux Commands.md
+++ b/content/fMRI Tutorial/1.1 Basic Linux Commands.md
@@ -4,7 +4,7 @@ draft: false
 tags:
   - Command
 ---
-### 1.1 Basic commands
+## 1 Basic commands
 
 Shells such as Bash, Zsh, and Tcsh provide powerful command-line environments for Unix-like systems, each with its own syntax and features. While they all allow users to execute multiple commands sequentially or in parallel, their scripting syntax and built-in functionalities differ. For example, Bash offers rich scripting capabilities and is widely adopted for its compatibility and flexibility, while Zsh includes advanced features like improved tab completion and a robust plugin system. Tcsh, known for its C-like syntax, is often preferred for interactive use due to its user-friendly command-line editing features. For example, AFNI uses the tsch shell. 
 
@@ -29,7 +29,17 @@ cd to/sub/folder
 cp original duplicate
 ```
 
-You can **remove** (`rm`) files, as well as rename (`rm`) files, or move (`mv`) files to elsewhere. 
+**rsync** -- a fast, versatile, remote (and local) file-copying tool. You need to have an SSH connection setup. 
+
+```bash
+#copy from remote files to local
+rsync -rv username@remote:/path/to/directory local/directory
+
+#copy from local to remote
+rsync -rv local/directory username@remote:/path/to/destination
+```
+
+You can **remove** (`rm`) files, rename (`rm`) files, or move (`mv`) files to elsewhere. 
 
 For directories, you can make a new directory (`mkdir`) or remove directory (`rmdir`).
 
@@ -62,7 +72,7 @@ head -n 48 data.csv | tail -n 5
 ```
 
 
-## 1.2 Regular expression 
+## 2 Regular expression 
 
 `grep` takes a piece of text followed by one or more filenames and prints all of the lines in those files that contain specified text or patterns. 
 
@@ -115,22 +125,22 @@ For example, count the number of trials for each sample durations (column 8 `cur
 cut -d , -f 8 Exp1.csv | grep -v curDur | sort | uniq -c
 ```
 
-### 1.3 String manipulations
+## 3 String manipulations
 
-Manipulating file names is a common task using command lines, for example, we want to subsitute a file name with a specified pattern. **S**tream **ed**itor `sed` command can perform lots of functions on file like searching, find and replace, insertion or deletion. 
+Manipulating file names is a common task using command lines. For example, we want to substitute a file name with a specified pattern. **S**tream **ed**itor `sed` command can perform many functions on file like searching, finding and replacing, insertion, or deletion. 
 
 **Replacing or substituting string**
 
 ```
 sed 's/unix/linux' aText.txt
 ```
-it will replace the word "unix" with "linux" in the file. Here `"s"` specifies the substitution operation. The `"/"` are delimiters. 
+It will replace the word `unix` with `linux` in the file. Here, `s` specifies the substitution operation, and the "/" delimiters are used. 
 
-Replacing the nth occurence of a pattern in a line by adding a number at the end of the experssion. For example, 
+Replacing the nth occurrence of a pattern in a line by adding a number at the end of the expression. For example, 
 ```
 sed 's/unix/linux/2' aText.txt
 ```
-Replacing all the occurence of the pattern in a line with the flag `/g` (global replacement)
+Replacing all the occurrence of the pattern in a line with the flag `/g` (global replacement)
 ```
 sed 's/unix/linux/g' aText.txt
 ```
@@ -148,8 +158,8 @@ The delimiter `/` could be `|`.
 >ls -R | grep _run | sed 's/_run/_task-bisection_run/'
 >```
 
-### 1.4 [[tmux]]
-`tmux` is a command-line terminal multiplexer for Unix-like systems.You can control `tmux` using key combinations; you first type a prefix key combination (by default `ctrl + b`) followed by additional command keys.
+## 4 [[tmux]]
+`tmux` is a command-line terminal multiplexer for Unix-like systems. You can control `tmux` using key combinations; you first type a prefix key combination (by default `ctrl + b`) followed by additional command keys.
 ```
 # list existing tmux sessions
 $ tmux ls
@@ -157,8 +167,8 @@ $ tmux ls
 $ tmux new -s fmriAna
 ```
 
-To make the connection remember what you are doing, I recommend using [[`tmux`]]. 
-Basically usage as follows:
+To make the connection and remember what you are doing; I recommend using `tmux.` 
+Basic usage as follows:
 
 ```bash
 # list existing tmux sessions
