--- a/content/fMRI Tutorial/1.2 GNode and Datalad.md
+++ b/content/fMRI Tutorial/1.2 GNode and Datalad.md
@@ -6,20 +6,20 @@ tags:
   - Datalad
 ---
 
-## 1.2.1 G-Node (German Neuroinformatics Node)
+## 1. G-Node 
 
-Focusing on the development and free distribution of tools for handling and analyzing neurophysiological data, G-Node aims at addressing these aspects as part of the International Neuroinformatics Coordinating Facility ([INCF](http://www.incf.org/)) and the German Bernstein Network for Computational Neuroscience ([NNCN](http://www.nncn.de/)). G-Node also serves as an international forum for Computational Neuroscientists that are interested in sharing experimental data and tools for data analysis and modeling. G-Node is funded through the German Federal Ministry of Education and Research and hosted by Ludwig-Maximilians-Universität München.
+Focusing on the development and free distribution of tools for handling and analyzing neurophysiological data, G-Node aims to address these aspects as part of the International Neuroinformatics Coordinating Facility ([INCF](http://www.incf.org/)) and the German Bernstein Network for Computational Neuroscience ([NNCN](http://www.nncn.de/)). G-Node also serves as an international forum for Computational Neuroscientists interested in sharing experimental data and tools for data analysis and modeling. G-Node is funded through the German Federal Ministry of Education and Research and hosted by [Ludwig-Maximilians-Universität München](https://lmu.de).
 
 Benefits of G-Node over Github:
 - Hosting large binary files
 - Assigning unique DOI. It is good to open data and get citations. 
-- Using `git-annex` as infrastructure, it helps manage versions. 
+- Using [[git-annex]] as infrastructure helps manage versions. 
 
-## 1.2.2 gin 
+### gin 
 
 Management of scientific data, including consistent organization, annotation, and storage of data, is a challenging task. Accessing and managing data from multiple workplaces while keeping it in sync, backed up, and easily accessible from within or outside the lab is even more demanding. The GIN (G-Node Infrastructure) service is a free and open data management system designed for comprehensive and reproducible management of neuroscientific data.
 
-### Gin client installation
+### gin client installation
 
 Please see the [official website]( https://gin.g-node.org/G-Node/Info/wiki/GIN+CLI+Setup) for installations. For Mac OS users, the easiest way to install the client on macOS is via [homebrew](https://brew.sh/). G-Node homebrew formulae are maintained in the [G-Node tap](https://github.com/g-node/homebrew-pkg). Install the client, including any dependencies, with:
 
@@ -61,7 +61,7 @@ You can instead upload individual files or directories by listing them on the co
     gin upload
 ```
 
-### Fetch any repository updates from the server
+**Fetch any repository updates from the server**
 
 If changes are made to your data elsewhere, for example on another computer (assuming they were uploaded to the server), or from another user that you share your data with, you can download these changes by typing the download command from within the repository.
 
@@ -79,7 +79,7 @@ gin download --content
 
 This will synchronize the local directory with all changes made on the server and download the content of all files.
 
-### Selective download
+**Selective download**
 
 When new data has become available or existing files have been changed on the GIN server, a selected subset of the changes can be downloaded to the local workspace.
 
@@ -87,13 +87,14 @@ When new data has become available or existing files have been changed on the GI
 2.  Use `gin ls` to check the sync status of the files in the repository.
 3.  Use `gin get-content <file name>` to download the data of a specific file.
 
-### Selective upload
+**Selective upload**
+
 When new data has been added to or existing files changed in the local workspace, a selected subset of the changes can be uploaded to the GIN server.
 
 1.  Use `gin ls` to check the sync status of the files in the repository.
 2.  Use `gin upload <file name>` to only upload the specified new file or changes to the specified existing file.
 
-### 1.2.3 DataLad
+## 2 DataLad
 
 A good start of [Datalad Handbook](https://handbook.datalad.org/en/latest/index.html).
 
@@ -119,25 +120,3 @@ git pull
 git push
 ```
 
-### git annex
-
-To ensure that your CSV files are managed by Git and not by `git-annex`, you can use the `git annex unannex` command to convert files that are currently managed by `git-annex` back to being managed by Git. After using `unannex`, you will commit the change to record the fact that these files are no longer managed by `git-annex`.
-
-Here's how you can do it:
-
-1. **Navigate to your repository's directory** in the terminal.
-    
-2. **Unannex the CSV files** you want to be managed by Git. You can do this for individual files or for all CSV files in a directory. Here's how you do it for all CSV files in the current directory:
-
-    
-    `git annex unannex *.csv`
-    
-    If your CSV files are spread out in different directories or you want to be more selective, you'll need to adjust the command accordingly.
-    
-3. **Commit the change** to record that these files are no longer managed by `git-annex`:
-    
-    `git commit -am "Move CSV files from git-annex to Git management"`
-    
-4. **Push the changes** to your remote repository:
-        
-    `git push`
