--- a/content/fMRI Tutorial/1.3 Cloud Computing and Access.md
+++ b/content/fMRI Tutorial/1.3 Cloud Computing and Access.md
@@ -8,11 +8,11 @@ tags:
 aThe following information is useful for those who can access Linux cluster at LRZ.de
 ## Access Cloud Computing
 
-Msense Lab also has two cloud computing running `Lora` and `Emma`. `Emma` is accessible from external internet while `Lora` is walled by the intranet. 
+Msense Lab also has two cloud computing systems, `Lora` and `Emma`. `Emma` is accessible from the external internet, while `Lora` is walled by the intranet. 
 
 > [!tips]
 > For convenience, it's better that you create aliases for those servers. For example, in your `.zshrc` or `.bashrc`, put similar lines:
-> `alias lora="10.10.10.10"` (please change the ip accordingly)
+> `alias lora="10.195.2.##"` (please change the ip accordingly)
 > 
 
 ### 1. __Via `SSH`__
@@ -21,9 +21,10 @@ Msense Lab also has two cloud computing running `Lora` and `Emma`. `Emma` is acc
 ssh -Y your_account@lora
 
 ```
-### 2. __Via VNC__
+### 2. __Via [[VNC]]__
 
-First you need to tunnel to the server, and initiate VNC server (it only requires once). The following should be run on the server side.
+2. Via VNC
+First, you need to tunnel to the server and initiate the [[VNC]] server (this only needs to be done once). The following commands should be run on the server side. 
 
 2.1 Setup VNC password
 ```bash 
@@ -37,9 +38,9 @@ You’ll be prompted to enter and verify your password. This password is require
 vncserver
 ```
 
-It will show you "New 'X' desktop is lora:#". Remeber this, we will first kill it and edit the xstartup file and restart it again. 
+It will show you "New 'X' desktop is lora:#". Remember this, we will first kill it and edit the file -  `xstartup` and restart it again. 
 
-2.3 Edit VNC xstartup file
+2.3 Edit VNC `xstartup` file
 
 First, kill the VNC service
 ```bash 
@@ -100,7 +101,7 @@ You need to install 'remote-SSH' and 'Remote Explorer' plugins. After you instal
 
 When the VS Code connects to the server, it will show the connection in the lower-left corner. The first time it opens nothing. You need to select 'Open Folder' to open a desired destination. 
 
-### 5. Mapping remote server to your local folder (advanced)
+### 5. Mapping the remote server locally
 
 This is desirable when checking remote MRI results like local files. It won't do any remote computation. And it requires changing the security level in your local Mac computer. 
 
@@ -143,7 +144,7 @@ https://doku.lrz.de/job-processing-on-the-linux-cluster-10745970.html
 Status here:
 https://doku.lrz.de/high-performance-computing-10613431.html
 
-## Install singularity
+### 2. Install singularity
 When logged in to the Linux cluster (on the login nodes), you can follow this recipe (this has been done):  
 
 ```
@@ -161,25 +162,25 @@ module use spack/modules/x86_avx2/linux-sles15-haswell   
 module load singularity squashfs  
 
 ```
-### 2. Slurm partition and job settings
+### 3. Slurm partition and job settings
 
 The following information needs to be updated; please check lrz.
 
-job settings
-**cm2_std:** 
---clusters=cm2  
---partition=cm2_std  
---qos=cm2_std
-
-**cm2_inter**:
---clusters=inter  
---partition=cm2_inter
-
-**cm2_inter_large_mem**
-56 cpu, memory 120 G
---clusters=inter  
---partition=cm2_inter_large_mem  
---mem=<memory_per_node_MB>M
+	job settings
+	**cm2_std:** 
+	--clusters=cm2  
+	--partition=cm2_std  
+	--qos=cm2_std
+	
+	**cm2_inter**:
+	--clusters=inter  
+	--partition=cm2_inter
+	
+	**cm2_inter_large_mem**
+	56 cpu, memory 120 G
+	--clusters=inter  
+	--partition=cm2_inter_large_mem  
+	--mem=<memory_per_node_MB>M
 
 **Common Slurm commands for job management:**
 56 cpu 56 G
@@ -196,7 +197,7 @@ sacct -M inter -X -u $USER --starttime=2021-01-01T00:00:01
 ```
 
 
-### 3. Interactive 
+### 4. Interactive 
 
 ```
 salloc -N 1 -M cm2_tiny -p cm2_tiny -t 2:00:00
