--- a/content/fMRI Tutorial/1.4 Neurocommand.md
+++ b/content/fMRI Tutorial/1.4 Neurocommand.md
@@ -17,7 +17,7 @@ export SINGULARITYENV_TEMPLATEFLOW_HOME=/dss/.templateflow
 module use /cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/*
 ```
 
-## 1.4.1 Command line and bash file usage
+## 1 Command line and bash file usage
 
 ```bash
 module load module_name
@@ -79,9 +79,9 @@ done
 echo "Brain extraction completed for all subjects."
 ```
 
-## 1.4.2 Use in Python
+## 2 Use in Python
 
-Unfortunately, the python environment cannot directly read the bash environment. So you need to set up the environment first in your Python. If you are using Jupyter Notebook, copy the following code to the beginning of your notebook:
+Unfortunately, the Python environment cannot directly read the bash environment. So you need to set up the environment first in your Python. If you are using Jupyter Notebook, copy the following code to the beginning of your notebook:
 
 ```python
 import os
@@ -99,3 +99,34 @@ import lmod
 await lmod.load('fsl')
 await lmod.list()
 ```
+
+### 3. Use with Google Colab
+
+The official guidance is [here](https://www.neurodesk.org/docs/getting-started/hosted/googlecolab/)
+
+At the beginning of your notebook, you need to add: 
+
+```python
+import os
+os.environ["LD_PRELOAD"] = "";
+os.environ["APPTAINER_BINDPATH"] = "/content"
+os.environ["MPLCONFIGDIR"] = "/content/matplotlib-mpldir"
+os.environ["LMOD_CMD"] = "/usr/share/lmod/lmod/libexec/lmod"
+
+!curl -J -O https://raw.githubusercontent.com/NeuroDesk/neurocommand/main/googlecolab_setup.sh
+!chmod +x googlecolab_setup.sh
+!./googlecolab_setup.sh
+
+os.environ["MODULEPATH"] = ':'.join(map(str, list(map(lambda x: os.path.join(os.path.abspath('/cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/'), x),os.listdir('/cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/')))))
+```
+
+Then, you can use it:
+```python
+import lmod
+await lmod.avail()
+
+await lmod.load('fsl/6.0.4')
+!bet
+
+```
+
