--- a/content/fMRI Tutorial/2.1 MRI Data Preparation.md
+++ b/content/fMRI Tutorial/2.1 MRI Data Preparation.md
@@ -8,7 +8,7 @@ tags:
 ---
 ## 2.1.1 MRI sequence
 
-Types of MRI data depend on what MRI sequence you use. An MRI sequence is a number of radiofrequency pluses and gradients that result in a set of images with a particular appearance. For example, here is a  property from the EPI bold sequence that we use. 
+Types of MRI data depend on what MRI sequence you use. An MRI sequence is a number of radiofrequency pulses and gradients that result in a set of images with a particular appearance. For example, here is a property from the EPI bold sequence that we use. 
 
 ![[epbold_sequence.jpeg|500]]
 
@@ -22,13 +22,13 @@ From the protocol, you will guess the sequence of that folder. For example, `T1W
 Within each folder, it stores individual DICOM images, like this:
 ![[MRI_subfolder_images.png|400]]
 
-DICOM stands for **D**igital **I**maging and **Co**mmunications in **M**edicine. Each image contain independent meta information, which is actually redundant for our purpose. If your run scan 1000 times, you will have 1000 DICOM files in that folder. To better organize your data, it is better convert DICOM data to Nifti file - a single file for each run.  
+DICOM stands for **D**igital **I**maging and **Co**mmunications in **M**edicine. Each image contain independent meta information, which is actually redundant for our purpose. If you run scan 1000 times, you will have 1000 DICOM files in that folder. To better organize your data, it is better convert DICOM data to Nifti file - a single file for each run.  
 
 ## 2.1.2 DICOM to Nifti converter
 
-When you copy data from MRI computer, all files are stored in DICOM format, with each image (single scan) as a single file. After you run one session of the experiment, you probably get about two to three thousand files. It would be wise to first convert your files to nifti format (\*.nii.gz). 
+When you copy data from an MRI computer, all files are stored in DICOM format, with each image (single scan) as a single file. After you run one session of the experiment, you probably get about two to three thousand files. It would be wise to first convert your files to nifti format (\*.nii.gz). 
 
-One very handy commandline tool to do this job is `dcm2nii` [DICOM to NIfTI converter](https://github.com/rordenlab/dcm2niix). If you want to use GUI version, another useful tool called `MRIcroGL`. [MRIcroGL](https://www.nitrc.org/plugins/mwiki/index.php/mricrogl:MainPage)  is a medical image viewer that allows you to load overlays (e.g., statistical maps), draw regions of interest. 
+One handy commandline tool for this job is `dcm2nii` [DICOM to NIfTI converter](https://github.com/rordenlab/dcm2niix). If you want to use the GUI version, another useful tool is `MRIcroGL`. [MRIcroGL](https://www.nitrc.org/plugins/mwiki/index.php/mricrogl:MainPage)  is a medical image viewer that allows you to load overlays (e.g., statistical maps), draw regions of interest. 
 
 With MRIcroGL open, click menu `Import` - `Convert DICOM to NIfTI`, it will pop up `dcm2niix` converter page. Specify filename rules, store location, and other settings, you can quickly convert DICOM to NIfTI. 
 
@@ -137,7 +137,7 @@ for subj in ${subs[@]}; do
 done
 ```
 
-Official tutorial can be found [here](https://heudiconv.readthedocs.io/en/latest/custom-heuristic.html). 
+Official tutorials can be found [here](https://heudiconv.readthedocs.io/en/latest/custom-heuristic.html). 
 
 
 #### Step 4. Compress raw data 
