--- a/content/fMRI Tutorial/2.2 BIDS Structure.md
+++ b/content/fMRI Tutorial/2.2 BIDS Structure.md
@@ -5,7 +5,7 @@ tags:
   - BIDS
   - mri
 ---
-BIDS stands for the `B`rain `I`maging `D`ata `S`tructure, which is a simple and intuitive way to organize and describe your data. The whole specification can be found from the [official website](https://bids-specification.readthedocs.io/en/stable/). Here are some excerption from the official website. 
+BIDS stands for the `B`rain `I`maging `D`ata `S`tructure, which is a simple and intuitive way to organize and describe your data. The whole specification can be found on the [official website](https://bids-specification.readthedocs.io/en/stable/). Here are some excerpts from the official website. 
 
 Before we go into details, let's clarify several important terms. 
 
