--- a/content/fMRI Tutorial/2.3 Preprocessing with fmriPrep.md
+++ b/content/fMRI Tutorial/2.3 Preprocessing with fmriPrep.md
@@ -6,7 +6,7 @@ tags:
   - fmriPrep
   - fMRI
 ---
-A standard preprocessing pipline of fMRI data looks as theh follows:
+A standard preprocessing pipeline of fMRI data looks as the follows:
 
 ```mermaid 
 flowchart TD
