--- a/content/fMRI Tutorial/3.1 Hemodynamic Response Function and GLM.md
+++ b/content/fMRI Tutorial/3.1 Hemodynamic Response Function and GLM.md
@@ -3,7 +3,7 @@ title: 3.1 Hemodynamic Response Function and GLM
 draft: false
 tags:
 ---
-## Hemodynamic response function
+## Hemodynamic response function [^1]
 
 The most widely used fMRI analysis is the general linear model (GLM) capitalizes on the changes in blood flow and oxygenation associated with neural activity (the hemodynamic response), and on the differing magnetic properties of oxygenated and deoxygenated blood. 
 
@@ -12,40 +12,36 @@ When a person performs a specific task or experiences a particular sensation, th
 Suppose we present a stimulus event $E_i$ to a participant at time 0. Let $N_i(t)$ denote the neural activation induced by this event at time $t$ and let $B_i(t)$ denote the correspond BOLD response. So we have the following mapping:
 
 $$N_i(t) \rightarrow f(\cdot) \rightarrow B_i(t)$$
+
 A system of this type mapping is called linear _if and only if_ it satisfies the __superposition principle__:
 
 if $f[N_1(t)] = B_1(t)$ and $f[N_2(t)] = B_2(t)$, then it must be true that
 
-$$f[a_1N_1(t)+a_2N_2(t)] = a_1B_1(t)+a_2B_2(t)$$ 
-If the superposition principle holds, then there is a straightforward way to determine the BOLD response to any neural activation from teh results of one simple experiment. Let's consider a delta function $\delta(t - \tau)$,
-$$\begin{equation} 
-\delta (t-\tau) = \begin{cases}
-1  & \text{if } t= \tau \\
-0  & \text{if } t \ne \tau
-\end{cases}
-\end{equation}$$
+$$f[a_1N_1(t)+a_2N_2(t)] = a_1B_1(t)+a_2B_2(t)$$
+
+If the superposition principle holds, then there is a straightforward way to determine the BOLD response to any neural activation from teh results of one simple experiment. Let's consider a delta function $\delta(t - \tau) = 1   \text{ if } t= \tau; \text{ otherwise }=0$,
+
+
 Suppose we have the following neural activity function after discretize. We can rewrite the function as 
+
 $$
 N(t) = n_1\delta(t-1) + n_2\delta(t-2) + ... + n_9\delta(t-9)
 $$
 
+
 More general form will be:
+
 $$N(t) = \sum_{\tau = 0}^\infty n_\tau \delta (t-\tau)$$
+
 
 The above is a convolution operation. 
 
 
 With the superposition principle, we can decompose the BOLD response:
 
-$$
-\begin{aligned}
-B(t) & =f[N(t)] \\
-	&=f[\sum_{\tau = 0}^\infty n_\tau \delta (t-\tau)] \\
-	& = \sum_{\tau = 0}^t n_\tau f[\delta (t-\tau)] \\
-	& := \sum_{\tau = 0}^t n_\tau h(t-\tau)
-\end{aligned}
-$$
-Here $h(t-\tau)$ is the response of the system to the delta function, traditionally called the _impulse response function_. In the fMRI literature, however, $h(t)$ is known as the hemodynamic response function (HRF)__. 
+$$B(t) =f[N(t)] =f[\sum_{\tau = 0}^\infty n_\tau \delta (t-\tau)] = \sum_{\tau = 0}^t n_\tau h(t-\tau)$$
+
+Here $h(t-\tau)$ is the response of the system to the delta function, traditionally called the _impulse response function_. In the fMRI literature, however, $h(t)$ is known as the hemodynamic response function (HRF). 
 
 The hemodynamic response function __is not__ a synonym for the BOLD response. Rather, it is the _hypothetical_ BOLD response to an idealized impulse of neural activation. 
 
@@ -91,13 +87,16 @@ The Gamma-variate functions are similar to the Gamma functions, but they consist
 
 Gamma-variate functions:
 
+
 $$g(t) = \frac{t^{\alpha_1 - 1} e^{-\frac{t}{\beta_1}}}{\beta_1^{\alpha_1} \Gamma(\alpha_1)} + \frac{a_2 \cdot t^{\alpha_2 - 1} e^{-\frac{t}{\beta_2}}}{\beta_2^{\alpha_2} \Gamma(\alpha_2)}$$
+
 
 where $a_2$ is the relative amplitude of the second gamma function. 
 
 The Double-Gamma functions are also similar to the Gamma functions, but they consist of two gamma functions that are convolved together. The Double-Gamma functions are parameterized by the peak response time, the undershoot time, the peak-undershoot ratio, and the relative amplitude and time delay of the second gamma function.
 
 Double-Gamma functions:
+
 
 $$g(t) = \frac{t^{\alpha_1 - 1} e^{-\frac{t}{\beta_1}}}{\beta_1^{\alpha_1} \Gamma(\alpha_1)} \otimes \frac{a_2 \cdot t^{\alpha_2 - 1} e^{-\frac{t}{\beta_2}}}{\beta_2^{\alpha_2} \Gamma(\alpha_2)}$$
 
@@ -108,6 +107,7 @@ In general, the choice of which HRF to use in AFNI depends on the specific resea
 ## General linear model
 
 $$Y = \beta_1 X_1 + \beta_2 X_2 + \beta_3 X3 + \epsilon $$
+
 where $beta$ is berta weights, $X$ regressor, $\epsilon$ residual. 
 
 In fMRI analysis, we estimate the average amplitude of the BOLD signal in response to each condition in our model. 
@@ -115,3 +115,5 @@ In fMRI analysis, we estimate the average amplitude of the BOLD signal in respon
 Since every voxel has its own time-series, we do the procedure above for every voxel in the brain. This is known as a __mass univariate__ analysis, since we estimate beta weights for each voxel's time-series. 
 
 Todo...
+
+[^1]: Ashby, F. G. (2011). Statistical Analysis of fMRI data
