Quartz sync: Mar 23, 2025, 10:50 PM

--- a/content/fMRI Tutorial/1.3 Cloud Computing and Access.md
+++ b/content/fMRI Tutorial/1.3 Cloud Computing and Access.md
@@ -21,10 +21,10 @@ Msense Lab also has two cloud computing systems, `Lora` and `Emma`. `Emma` is ac
 ssh -Y your_account@lora
 
 ```
-### 2. __Via [[VNC]]__
+### 2. __Via VNC__
 
 2. Via VNC
-First, you need to tunnel to the server and initiate the [[VNC]] server (this only needs to be done once). The following commands should be run on the server side. 
+First, you need to tunnel to the server and initiate the VNC server (this only needs to be done once). The following commands should be run on the server side. 
 
 2.1 Setup VNC password
 ```bash 
@@ -200,11 +200,7 @@ sacct -M inter -X -u $USER --starttime=2021-01-01T00:00:01
 ### 4. Interactive 
 
 ```
-salloc -N 1 -M cm2_tiny -p cm2_tiny -t 2:00:00
-salloc -N 1 -M inter -p cm2_inter -t 2:00:00
-
-salloc -N 1 -M inter -p cm4_inter_large_mem -t 24:00:00
-salloc -N 1 -M inter -p cm2_inter_large_mem -t 6:00:00
+salloc -N 1 -M inter -p cm4_inter -t 8:00:00
 
 ```
 #### show CPUs and Memory
