--- a/content/fMRI Tutorial/3.2 First-level Analysis with FSL.md
+++ b/content/fMRI Tutorial/3.2 First-level Analysis with FSL.md
@@ -2,6 +2,8 @@
 title: 3.2 First-level Analysis with FSL
 draft: false
 tags:
+  - GLM
+  - FSL
 ---
 Before doing first-level analysis, you must run brain extraction using BET, ensure your functional and structural data are in NIFTI format, and ensure that you have any necessary event timing files (e.g., stimulus onset, durations). 
 
