--- a/content/fMRI Tutorial/3.1 Hemodynamic Response Function and GLM.md
+++ b/content/fMRI Tutorial/3.1 Hemodynamic Response Function and GLM.md
@@ -2,6 +2,8 @@
 title: 3.1 Hemodynamic Response Function and GLM
 draft: false
 tags:
+  - GLM
+  - HRF
 ---
 ## Hemodynamic response function [^1]
 
