Quartz sync: May 19, 2025, 12:53 AM

--- a/content/fMRI Tutorial/5.1 NiLearn fMRI Basic Analysis.md
+++ b/content/fMRI Tutorial/5.1 NiLearn fMRI Basic Analysis.md
@@ -47,7 +47,10 @@ for sub in subjects:
         mask   = func.replace('preproc_bold', 'brain_mask')
         events = f'{proj_dir}/sub-{sub}/func/' \
                  f'sub-{sub}_task-flanker_run-{run}_events.tsv'
-        conf   = func.replace('desc-preproc_bold', 'desc-confounds_timeseries')
+        confounds_tsv= f'{proj_dir}/derivatives/sub-{sub}/func/'
+				 f'sub-{sub}_task-flanker_run-{run}_desc-confounds_timeseries.tsv'
+
+)
 
         events_df    = pd.read_csv(events, sep='\t')
         confounds_df = pd.read_csv(conf,   sep='\t')[motion_cols]
