Quartz sync: Jul 18, 2025, 10:55 AM

--- a/content/fMRI Tutorial/2.1 MRI Data Acquisition and Preparation.md
+++ b/content/fMRI Tutorial/2.1 MRI Data Acquisition and Preparation.md
@@ -70,7 +70,7 @@ heudiconv -f HEURISTIC-FILE-OR-NAME -o OUTPUT-PATH --files INPUT-PATHs
 
 #### Step 0. Check the raw folders
 
-Check each participant, each folder, remove those unfinished sessions (or those repeated sessions). 
+Check each participant, each folder, and remove those unfinished sessions (or those repeated sessions). 
 
 #### Step 1. Create a heuristic file
 
@@ -117,7 +117,7 @@ return info
 heudiconv --files dicom/{subject}/*/*.ima -o Nifti/ -f Nifti/code/heuristic.py -s 219 -ss itbs -c dcm2niix -b --minmeta --overwrite
 ```
 
-I would suggest to write a bash script to convert the file. Here is one example:
+I would suggest writing a bash script to convert the file. Here is one example:
 ```bash
 #!/bin/bash
 # subjects array
