--- a/content/fMRI Tutorial/2.2 BIDS Structure.md
+++ b/content/fMRI Tutorial/2.2 BIDS Structure.md
@@ -9,10 +9,10 @@ BIDS stands for the `B`rain `I`maging `D`ata `S`tructure, which is a simple and 
 
 Before we go into details, let's clarify several important terms. 
 
-1.  **Dataset** - a set of neuroimaging and behavioral data acquired for a purpose of a particular study.     
-2.  **Subject** - a person or animal participating in the study. Used interchangeably with term **Participant**.    
-3.  **Session** - a logical grouping of neuroimaging and behavioral data consistent across subjects. In general, subjects will stay in the scanner during one session.     
-4.  **Sample** - a sample pertaining to a subject such as tissue, primary cell or cell-free sample. The `sample-<label>` key/value pair is used to distinguish between different samples from the same subject.   
+1.  **Dataset** - a set of neuroimaging and behavioral data acquired for the purpose of a particular study.     
+2.  **Subject** - a person or animal participating in the study. Used interchangeably with the term **Participant**.    
+3.  **Session** - a logical grouping of neuroimaging and behavioral data consistent across subjects. Generally, subjects remain in the scanner for one session.     
+4.  **Sample** - a sample about a subject such as tissue, primary cell, or cell-free sample. The `sample-<label>` key/value pair is used to distinguish between different samples from the same subject.   
 5.  **Data type** - a functional group of different types of data. BIDS defines the following data types:
     1.  `func` (task based and resting state functional MRI)
     2.  `dwi` (diffusion weighted imaging)
