--- a/content/fMRI Tutorial/2.5 fMRIPrep and FitLins.md
+++ b/content/fMRI Tutorial/2.5 fMRIPrep and FitLins.md
@@ -8,7 +8,7 @@ tags:
 
 ## 1. Preprocessing with fMRIPrep
 
-[[2.3 Preprocessing with fmriPrep|fMRIPrep]] is a robust and standardized pipeline for fMRI data. It handles tasks such as skull-stripping, motion correction, distortion correction, and registration to standard space—all while creating extensive reports for quality control.
+[[2.3 fmriPrep with Docker|fMRIPrep]] is a robust and standardized pipeline for fMRI data. It handles tasks such as skull-stripping, motion correction, distortion correction, and registration to standard space—all while creating extensive reports for quality control.
 
 fMRIPrep is included in NeuroDesk and can be loaded by `module` command. 
 
